# iiif-downloader

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  gallica.txt  iiif_downloader.py  manifest2.txt  manifests.txt  pyproject.toml  requirements.txt  run.py  setup.py  test-manifests.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
.github/workflows/: test.yml
src/: .coverage  Downloader.py  Image.py  Manifest.py  iiif_downloader.py
src/iiif_download/: __init__.py  cli.py  config.py  downloader.py  image.py  manifest.py
src/iiif_download/tests/: conftest.py  test_config.py  test_downloader.py  test_manifest.py
src/iiif_download/tests/fixtures/: manifest_empty.json  manifest_v2.json
src/iiif_download/utils/: __init__.py  logger.py
src/tests/: __init__.py  test_config.py  test_downloader.py  test_manifest.py
src/tests/fixtures/: manifest_test.json  manifest_v3.json
src/utils/: __init__.py  logger.py
utils/: __init__.py  constants.py  logger.py
