[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/iiif_download/tests/*.py" = [
    "E402",  # Module level import not at top of file
    "F401",  # Imported but unused
    "I001",  # Import block is un-sorted or un-formatted
]

[tool.pytest.ini_options]
addopts = "-v --cov=src/iiif_download --cov-report=term-missing"
testpaths = ["src/iiif_download/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src/iiif_download"]
omit = [
    "*/tests/*",
    "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"]
show_missing = true
fail_under = 50
